--- a/sport.css
+++ b/sport.css
@@ -1,16 +1,19 @@
 .body {
     margin: 0;
 padding: 0;
-border: 2px solid
+/* border: 2px solid */
 }
 .basketball {
-    /* padding: 0px 300px 20px 250px; */
+    padding-left: 300px;
+    padding-right: 300px;
     /* float: left; */
-    background-color: aqua
+    background-color:slategray;
+    /* margin: 100px;  */
 }
 
 #soccer {
     text-align: center;
+    margin: 50px;
 }
 
 #football {
@@ -23,13 +26,15 @@ border: 2px solid
     font-family: 'Indie Flower', cursive;
     font-size: 40px;
     background-color: blue;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     padding-top: 3px;
 }
 
 .wrapper {
     font-family: 'Baloo Thambi', cursive;
-    padding-bottom: 5px;
+    padding: 10px;
+    
+    background-color: blue;
 }
 
 .form {
@@ -50,4 +55,11 @@ border: 2px solid
     background-image: URL(../4-sportDB/img/field-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: 5;
+    margin: 10px;
+}
+
+article {
+    padding: 15px;
 }
